# native-activity-bgfx

./: .gitignore  .gitmodules  README.md  local.properties
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  main.cpp
app/src/main/res/values/: strings.xml
